<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/svAuthResultDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:textColor="#80000000"
                android:textSize="@dimen/customTitle"/>

            <TextView
                android:id="@+id/tvSurnameAuthResultDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#668089"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d5d5d5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/surname"
                android:textColor="#80000000"
                android:textSize="@dimen/customTitle" />

            <TextView
                android:id="@+id/tvNameAuthResultDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#668089"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d5d5d5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/father_name"
                android:textColor="#80000000"
                android:textSize="@dimen/customTitle" />

            <TextView
                android:id="@+id/tvFatherNameAuthResultDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#668089"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d5d5d5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/living_place"
                android:textColor="#80000000"
                android:textSize="@dimen/customTitle" />

            <TextView
                android:id="@+id/tvLivingPlaceAuthResultDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#668089"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d5d5d5" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/national_id_serial_number"
                android:textColor="#80000000"
                android:textSize="@dimen/customTitle"/>

            <TextView
                android:id="@+id/tvIdDocumentAuthResultDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#668089"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d5d5d5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pin_code"
                android:textColor="#80000000"
                android:textSize="@dimen/customTitle"/>

            <TextView
                android:id="@+id/tvPinCodeAuthResultDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#668089"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d5d5d5" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>