<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VehicleSearchActivity"
    tools:showIn="@layout/activity_vehicle_search">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewVehicleSearchActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="80dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <RadioGroup
                        android:id="@+id/rgMIANonMIAVehicleSearchActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rbMIAVehicleSearchActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mia" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rbNonMIAVehicleSearchActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="70dp"
                            android:text="@string/nonMia"
                            android:layout_marginStart="70dp" />

                    </RadioGroup>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilCertificateNumberVehicleSearchActivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rgMIANonMIAVehicleSearchActivity">

                        <EditText
                            android:id="@+id/etCertificateNumberVehicleSearchActivity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/certificate_number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilCarNumberVehicleSearchActivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@id/btnSearchVehicleSearchActivity"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tilCertificateNumberVehicleSearchActivity">

                        <EditText
                            android:id="@+id/etCarNumberVehicleSearchActivity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/number_plate" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/clNonMiaFieldsVehicleSearchActivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="20dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@id/btnSearchVehicleSearchActivity"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rgMIANonMIAVehicleSearchActivity">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilCertificateNumberNonMIAVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <EditText
                                android:id="@+id/etCertificateNumberNonMIAVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/certificate_number" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilCarNumberNonMIAVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilCertificateNumberNonMIAVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etCarNumberNonMIAVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/number_plate" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilBodyNumberVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilCarNumberNonMIAVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etBodyNumberVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/body_number" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilChassisNumberVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilBodyNumberVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etChassisNumberVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/chassis_number" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilEngineNumberVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilChassisNumberVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etEngineNumberVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/engine_number" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilYearOfManufactureVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilEngineNumberVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etYearOfManufactureVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/year_of_manufacture" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilVehicleColorVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilYearOfManufactureVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etVehicleColorVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/vehicle_color" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilMakeVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilVehicleColorVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etMakeVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/make" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilModelVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilMakeVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etModelVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/model" />

                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:id="@+id/tvVehicleTypeVehicleSearchActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:textSize="@dimen/headerTitle"
                            android:layout_marginTop="20dp"
                            android:text="@string/vehicle_type"
                            android:textColor="@color/colorText"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tilModelVehicleSearchActivity" />

                        <Spinner
                            android:id="@+id/spVehicleTypeVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:entries="@array/vehicle_type"
                            android:spinnerMode="dialog"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvVehicleTypeVehicleSearchActivity" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilEngineCapacityVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/spVehicleTypeVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etEngineCapacityVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/engine_capacity" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilMaxPermissibleMassVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/spVehicleTypeVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etMaxPermissibleMassVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/max_permissible_mass" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilPassengerSeatCountVehicleSearchActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/spVehicleTypeVehicleSearchActivity">

                            <EditText
                                android:id="@+id/etPassengerSeatCountVehicleSearchActivity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/passenger_seat_count" />

                        </android.support.design.widget.TextInputLayout>

                    </android.support.constraint.ConstraintLayout>

                    <Button
                        android:id="@+id/btnSearchVehicleSearchActivity"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/btn_background"
                        android:text="@string/search"
                        android:textColor="#ffffff"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </ScrollView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>